# qutip-qip

./: .codeclimate.yml  .gitignore  .pre-commit-config.yaml  .pytest.toml  .readthedocs.yaml  .typos.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.md.bak.20260317084208  README.md.bak.20260317085207  Untitled.ipynb  pylock.toml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  temp.py  temp2.py  test_metrics.py
.github/: FUNDING.yaml  SECURITY.md  dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: black.yml  build.yaml  build.yml  build_documentation.yml  doctest.yaml  doctest.yml  documentation.yml  lint.yaml  lint.yml  pulse-paper.yaml  pulse-paper.yml  release.yml  spell-check.yaml  spell-check.yml  test.yaml  test.yml
.qtly/: qlty.toml
benchmarks/: README.md  circuits.py  run_benchmarks.py
doc/: Makefile  requirements.txt
doc/pulse-paper/: README.md  customize.py  customize.py.bak.20260317085223  decoherence.py  decoherence.py.bak.20260317085239  deutsch-jozsa.qasm  deutsch_jozsa-qasm.py  deutsch_jozsa-qasm.py.bak.20260317085244  dj_algorithm.py  main_example.py  pulse_simulation.py  qft.py
doc/source/: Hadamard  apidoc.rst  bibliography.rst  changelog.rst  conf.py  contribution-code.rst  contribution-docs.rst  create_tutorials_html.py  html2rst.py  index.rst  installation.rst  introduction.rst  qip-basics.rst  qip-deutsch-jozsa.rst  qip-grover.rst  qip-processor.rst  qip-qiskit.rst  qip-simulator.rst  qip-vqa.rst  qutip_qip.bib  references.bib  tutorials.rst  tutorials_v5.rst  w-state.qasm
doc/source/_apidoc/: qutip_qip.algorithms.rst  qutip_qip.decompose.rst  qutip_qip.decompositions.rst  qutip_qip.operations.rst  qutip_qip.rst  qutip_qip.transpiler.rst
doc/source/_templates/: layout.html
doc/source/apidoc/: qutip_qip.algorithms.rst  qutip_qip.circuit.rst  qutip_qip.circuit_latex.rst  qutip_qip.compiler.rst  qutip_qip.decompose.rst  qutip_qip.device.rst  qutip_qip.noise.rst  qutip_qip.operations.rst  qutip_qip.pulse.rst  qutip_qip.qasm.rst  qutip_qip.qir.rst  qutip_qip.qiskit.rst  qutip_qip.qubits.rst  qutip_qip.styleconfig.rst  qutip_qip.transpiler.rst  qutip_qip.vqa.rst
doc/source/tutorials-website/: create_tutorials_html.py  qutip-qip-v5.html  tutorials.html.jinja  tutorials.rst.jinja
docs/: Makefile  requirements.txt
docs/paper/: README.md  customize.py  dj_algorithm.py  pulse_simulation.py  swap.qasm
docs/pulse-paper/: README.md  customize.py  decoherence.py  dj_algorithm.py  pulse_simulation.py  swap.qasm
docs/source/: apidoc.rst  conf.py  contribution-code.rst  contribution-docs.rst  index.rst  installation.rst  introduction.rst  qip-basics.rst  qip-processor.rst  qip-simulator.rst
docs/source/_apidoc/: modules.rst  qutip_qip.compiler.rst  qutip_qip.device.rst  qutip_qip.rst
pulse-paper/: README.md  customize.py  decoherence.py  deutsch_jozsa-qasm.py  dj_algorithm.py  main_example.py  qft.py
qip/: __init__.py  circuit.py  version.py
qip/algorithms/: qft.py
qip/compiler/: cavityqedcompiler.py  spinchaincompiler.py
qip/device/: __init__.py  cavityqed.py  modelprocessor.py  optpulseprocessor.py  processor.py  spinchain.py
src/qip/: __init__.py
src/qip/algorithms/: qft.py
src/qip/compiler/: cavityqedcompiler.py  spinchaincompiler.py
src/qip/device/: spinchain.py
src/qip/operations/: __init__.py
src/qutip_qip/: __init__.py  about.py  circuit.py  circuit_latex.py  compat.py  decompose.py  family.py  gates.py  namespace.py  noise.py  pulse.py  qasm.py  qip_deprecation.py  qir.py  qubits.py  scheduler.py  typing.py  utilities.py  utils.py  version.py  vqa.py
src/qutip_qip/_decompose/: decompose_single_qubit_gate.py
src/qutip_qip/_decomposition_functions/: __init__.py  _single_qubit_gate.py  _utility.py
src/qutip_qip/algorithms/: __init__.py  bit_flip.py  deutsch_jozsa.py  grover.py  phase_flip.py  qft.py  qpe.py  shor_code.py  untitled.ipynb
src/qutip_qip/circuit/: __init__.py  _decompose.py  base_renderer.py  circuit.py  circuitsimulator.py  color_theme.py  conditional.py  instruction.py  label.py  mat_renderer.py  optimise.py  tex_renderer.py  texrenderer.py  text_renderer.py  textrenderer.py  utils.py
src/qutip_qip/compiler/: __init__.py  cavityqedcompiler.py  circuitqedcompiler.py  gatecompiler.py  instruction.py  scheduler.py  spinchaincompiler.py
src/qutip_qip/decompose/: __init__.py  _utility.py  decompose_general_qubit_gate.py  decompose_single_qubit_gate.py  decompose_two_qubit_gate.py  single_decompositions.py  single_qubit_gate.py
src/qutip_qip/decompositions/: __init__.py  circuit_diagram.py  converters.py  (+8 more)
tests/: conftest.py  jupyter-ExportImage_NoteBook.ipynb  pytest.ini  test_bit_flip.py  test_circuit.py  test_compiler.py  test_dec.py  test_deutsch_jozsa.py  test_device.py  test_family.py  test_gates.py  test_general_decompositions.py  test_grover.py  test_ionq.py  test_matrenderer.py  test_measurement.py  test_model.py  test_noise.py  test_optpulseprocessor.py  test_oracle.py  test_phase_flip.py  test_processor.py  test_pulse.py  test_qasm.py  test_qft.py  test_qir.py  test_qiskit.py  test_qpe.py  test_qubitcircuit.py  test_qubits.py  test_renderer.py  test_scheduler.py  test_shor_code.py  test_textrenderer.py  test_utils.py  test_vqa.py
tests/decompose/: test_single_decompositions.py  test_single_qubit_gate_decompositions.py  test_utility.py
tests/decomposition_functions/: test_decompose_general_qubit_gate.py  test_general_decomposition.py  test_general_qubit_decomposition.py  test_single_qubit_gate_decompositions.py  test_two_qubit_gate.py  test_utility.py
tests/gate_decompose/: test_single_decompositions.py  test_utility.py
tests/gate_decompositions/: test_decomposition_extras.py  test_general_decompositions.py  test_single_decompositions.py
tests/qasm_files/: bracket_error.qasm  command_error.qasm  qasm_error.qasm  qft.qasm  teleportation.qasm  test_add.qasm  test_custom_gates.qasm  w-state.qasm  w-state_with_comments.qasm
(+93 files in other folders)
