[build-system]
requires = [
    "setuptools>=42",
    "setuptools-git-versioning",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "qutip-qip"
dynamic = ["version"]
description = "The QuTiP quantum information processing package"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.9.0",
    "qutip>=5.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
]
keywords = [
    "quantum",
    "physics",
    "pulse-level-control",
    "noisy-simulation",
    "quantum-computing",
    "quantum-circuits",
    "quantum-devices",
    "quantum-information",
]
authors = [
    {name = "Alexander Pitchford"},
    {name = "Paul D. Nation"},
    {name = "Robert J. Johansson"},
    {name = "Chris Granade"},
    {name = "Arne Grimsmo"},
    {name = "Nathan Shammah"},
    {name = "Shahnawaz Ahmed"},
    {name = "Neill Lambert"},
    {name = "Eric Giguere"},
    {name = "Boxi Li"},
    {name = "Jake Lishman"},
    {email = "qutip-admin@googlegroups.com"}
]

[project.urls]
Homepage = "https://qutip.org"
Documentation = "https://qutip-qip.readthedocs.io/en/stable/"
Repository = "https://github.com/qutip/qutip-qip"
Issues = "https://github.com/qutip/qutip-qip/issues"

[project.optional-dependencies]
graphics = ["matplotlib>=1.3.0"]
control = ["qutip-qtrl>=0.1"]
qiskit = ["qiskit>=2.0.0"]
full = [
    "qutip-qip[graphics,qiskit,control]",
]

[project.entry-points."qutip.family"]
qutip_qip = "qutip_qip.family"

[dependency-groups]
lint = [
    "black==26.1.0",
]
test = [
    "pytest>=5.2",
    "pytest-repeat>=0.9",
    "qiskit_aer>=0.17.0",  # Some tests in test_qiskit.py use Aer for verification
]
doc = [
    "sphinx==7.4.7",
    "sphinx-rtd-theme==2.0.0",
    "sphinxcontrib-bibtex==2.6.2",
    "readthedocs-sphinx-search==0.3.2",
    "numpydoc==1.8.0",
    "docutils==0.20.1",
]
dev = [ {include-group = "test"}, {include-group = "lint"}]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true
version_file = "VERSION"
count_commits_from_version_file = true
dev_template = "{tag}{ccount}+git.{sha}"
dirty_template = "{tag}{ccount}+git.{sha}.dirty"

[tool.black]
line-length = 88
